[package]
name = "ixy"
version = "0.1.0"
authors = ["Simon Ellmann <simon.ellmann@tum.de>"]
edition = "2018"

[dependencies]
libc = "0.2"
byteorder = "1"
log = "0.4"
lazy_static = "1.4.0"

nullnet-firewall = { git = "https://github.com/GyulyVGC/nullnet-firewall", branch = "logs"}
etherparse = "0.13.0"

[dev-dependencies]
simple_logger = "4.2.0"
